css fixed on mobile devices

--- a/marketplace/ui/src/components/MarketPlace/index.css
+++ b/marketplace/ui/src/components/MarketPlace/index.css
@@ -649,33 +649,10 @@ img.ant-image-preview-img {
   }
 }
 
-@media (min-width: 769px) and (max-width: 834px) {
-  .staking_banner_text {
-    font-size: 44px;
-    left: 7%;
-    top: -15%;
-    /* line-height: 22px; */
-  }
-
-  .staking_banner_text > h1:nth-child(3){
-    line-height: 28px;
-  }
-
-  .stake-banner-stats{
-    top: -20px !important;
-    left: -60px;
-  }
-
-  .stake-banner-stats-title{
-    font-size: 12px;
-  }
-
-  .stake-banner-stats-value{
-    font-size: 24px;
-  }
-
-}
 @media (min-width: 835px) and (max-width: 999px) {
+  .pay-summary-responsive-span {
+    right: 28.1% !important;
+  }
   .staking_banner_text {
     font-size: 44px;
     left: 7%;
@@ -692,7 +669,16 @@ img.ant-image-preview-img {
   }
 }
 
+@media (min-width: 820px) and (max-width: 840px) {
+  .pay-summary-responsive-span {
+    right: 25.5% !important;
+  }
+}
+
 @media (min-width: 769px) and (max-width: 999px) {
+  .pay-summary-responsive-span {
+    right: 26.5% !important;
+  }
   .collectible_banner_text {
     width: 360px;
     font-size: 40px;
@@ -811,7 +797,29 @@ img.ant-image-preview-img {
   }
 }
 
+
+@media (min-width: 769px) and (max-width: 912px) {
+  .pay-summary-responsive-span {
+    right: 28% !important;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 853px) {
+  .pay-summary-responsive-span {
+      right: 26.5% !important;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 834px) {
+  .pay-summary-responsive-span {
+    right: 25.5% !important;
+  }
+}
+
 @media (min-width: 600px) and (max-width: 768px) {
+  .pay-summary-responsive-span {
+    right: 24%;
+  }
   .collectible_banner_text {
     width: 300px;
     font-size: 40px;
@@ -953,6 +961,9 @@ img.ant-image-preview-img {
 }
 
 @media (min-width: 481px) and (max-width: 599px) {
+  .pay-summary-responsive-span {
+    right: 17.5%;
+  }
   .collectible_banner_text {
     width: 250px;
     font-size: 36px;
@@ -1101,6 +1112,9 @@ img.ant-image-preview-img {
 }
 
 @media (min-width: 400px) and (max-width: 480px) {
+  .pay-summary-responsive-span {
+    right: 9.5%;
+  }
   .collectible_banner_text {
     width: 180px;
     font-size: 24px;
@@ -1258,7 +1272,16 @@ img.ant-image-preview-img {
   }
 }
 
+@media (min-width: 400px) and (max-width: 420px) {
+  .pay-summary-responsive-span {
+    right: 10%;
+  }
+}
+
 @media (max-width: 399px) {
+  .pay-summary-responsive-span {
+    right: 12%;
+  }
   .collectible_banner_text {
     width: 180px;
     font-size: 24px;
@@ -1414,6 +1437,25 @@ img.ant-image-preview-img {
 
   .product-detail-swiper {
     max-width: 330px;
+  }
+}
+
+
+@media (min-width: 360px) and (max-width: 390px) {
+  .pay-summary-responsive-span {
+    right: 11.5% !important;
+  }
+}
+
+/* @media (min-width: 360px) and (max-width: 390px) {
+  .pay-summary-responsive-span {
+      right: 11% !important;
+  }
+} */
+
+@media (min-width: 390px) and (max-width: 400px) {
+  .pay-summary-responsive-span {
+    right: 11% !important;
   }
 }
 
